syntax = "proto3";

package xbasissvc.internal.application;

import "konekko.me/xbasis/commons/dto/commons.proto";

service UserSync {

    rpc Check (CheckRequest) returns (xbasis.commons.dto.Status);

    rpc Update (UserInfo) returns (xbasis.commons.dto.Status);
}

message CheckRequest {
    string userId = 1;
    string appId = 2;
}

message UserInfo {
    string gId = 1;
    string username = 2;
    string account = 3;
    string icon = 4;
    string realName = 5;
    string appId = 6;
    string url = 7;
    int64 appType = 8;
}