syntax = "proto3";

package gosionsvc.external.authentication;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Router {

    rpc Push (PushRequest) returns (PushResponse);

    rpc Refresh (RefreshRequest) returns (RefreshResponse);

    rpc Logout (LogoutRequest) returns (xbasis.commons.dto.Status);

    rpc Authorize (AuthorizeRequest) returns (xbasis.commons.dto.Status);
}

message AuthorizeRequest {
    string clientId = 1;
}

message LogoutRequest {
    string refreshToken = 1;
}

message RefreshRequest {
    string refreshToken = 1;
}

message RefreshResponse {
    xbasis.commons.dto.State state = 1;
    string accessToken = 2;
}

message PushRequest {
    string routeTo = 1; // clientId
    string redirect = 2;
}

message PushResponse {
    xbasis.commons.dto.State state = 1;
    string accessToken = 2;
    string refreshToken = 3;
}