syntax = "proto3";

package xbasissvc.internal.user;

import "konekko.me/xbasis/commons/dto/commons.proto";

service User {

    rpc IsExists (ExistsRequest) returns (xbasis.commons.dto.Status);

    rpc GetUserInfoById (GetUserInfoByIdRequest) returns (SimpleUserInfo);

}

message ExistsRequest {
    string userId = 1;
    string account = 2;
}

message SimpleUserInfo {
    xbasis.commons.dto.State state = 1;
    string userId = 2;
    string username = 3;
    string icon = 4;
    string realName = 5;
    int64 userState = 6;
    bool fromInvite = 7;
    bool invite = 8;
}

message GetUserInfoByIdRequest {
    string userId = 1;
}